# data-curation-modules

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  run_commands_for_all_modules.py
.github/workflows/: publish_packages.yml
c4_filters/: README.md  pyproject.toml
c4_filters/gptnl_c4_filters/: __init__.py  c4_bad_words_filter.py  c4_quality_filter.py
fineweb_quality_filter/: README.md  pyproject.toml
fineweb_quality_filter/gptnl_fineweb_quality_filter/: __init__.py  fineweb_quality_filter.py
ftfy_formatter/: README.md  poetry.toml  pyproject.toml
ftfy_formatter/gptnl_ftfy_formatter/: __init__.py  ftfy_formatter.py  ftfy_formatter_test.py
gopher_quality_filter/: README.md  post_install.py  pyproject.toml
gopher_quality_filter/gptnl_gopher_quality_filter/: __init__.py  gopher_quality_filter.py
gopher_quality_filter/tests/: gopher_quality_filter_test.py
gopher_repetition_filter/: README.md  pyproject.toml
gopher_repetition_filter/gptnl_gopher_repetition_filter/: __init__.py  gopher_repetition_filter.py
gopher_repetition_filter/tests/: gopher_repetition_filter_test.py
llm_processing/: README.md  pyproject.toml
llm_processing/gptnl_llm_processing/: model.py  pipeline_step.py
llm_processing/tests/: examples.py  test_pipeline.py  test_prompting_synth_data.py  utils.py
machine_translation/: README.md  pyproject.toml
machine_translation/gptnl_machine_translation/: __init__.py  batch.py  dataset.py  long_document_translator.py  model.py  pipeline.py
machine_translation/tests/: examples.py  models.py  test_batch.py  test_long_translation.py  test_model.py  test_pipeline.py  utils.py
nordicpile_quality_filter/: README.md  post_install.py  pyproject.toml
nordicpile_quality_filter/gptnl_nordicpile_quality_filter/: __init__.py  nordicpile_quality_filter.py
nordicpile_quality_filter/tests/: nordicpile_quality_filter_test.py
pii_mappers/: README.md  create_pytest_files.ipynb  pii_quick_test_notebook.ipynb  pyproject.toml  pytest.ini
pii_mappers/data/: test_large_text.txt
pii_mappers/data/gptnl_synthetic_pii_data/: 1_generate_synthetic_pii_data.ipynb  2_generate_faker_data.ipynb  README.md
pii_mappers/data/gptnl_synthetic_pii_data/EN/: PII_Address.csv  PII_AustralianBankAccountNumber.csv  PII_AustralianDriversLicenseNumber.csv  PII_AustralianPassportNumber.csv  PII_AustralianTaxFileNumber.csv  PII_Birthday.csv  PII_CanadianBankAccountNumber.csv  PII_CanadianPassportNumber.csv  PII_CreditCardCVVCode.csv  PII_CreditCardExpiryDate.csv  PII_CreditCardNumber.csv  PII_EmailAddress.csv  PII_EuropeanVATNumber.csv  PII_FilePath.csv  PII_IBAN.csv  PII_IPAddress.csv  PII_InternationalPhoneNumber.csv  PII_MACAddress.csv  PII_Organisation.csv  PII_Person.csv  PII_UKDriversLicenseNumber.csv  PII_UKNationalInsuranceNumber.csv  PII_UKUniqueTaxpayerReferenceNumber.csv  PII_UK_USPassportNumber.csv  PII_URL.csv  PII_USBankAccountNumber.csv  PII_USIndividualTaxPayerIdentificationNumber.csv  PII_USSocialSecurityNumber.csv
pii_mappers/data/gptnl_synthetic_pii_data/NL/: PII_Address.csv  PII_BelgianIdentityNumber.csv  PII_BelgianLicencePlateNumber.csv  PII_BelgianPassportNumber.csv  PII_BelgianPhoneNumber.csv  PII_Birthday.csv  PII_CreditCardCVVCode.csv  PII_CreditCardExpiryDate.csv  PII_CreditCardNumber.csv  PII_DutchBelgianDriversLicenseNumber.csv  PII_DutchIdentityDocumentNumber.csv  PII_DutchIdentityNumberBSN.csv  PII_DutchLicensePlateNumber.csv  PII_DutchPhoneNumber.csv  PII_DutchVreemdelingenDocumentNumber.csv  PII_EmailAddress.csv  PII_EuropeanVATNumber.csv  PII_FilePath.csv  PII_IBAN.csv  PII_IPAddress.csv  PII_InternationalPhoneNumber.csv  PII_MACAddress.csv  PII_Organisation.csv  PII_Person.csv  PII_URL.csv
pii_mappers/gptnl_pii_mappers/: __init__.py  __main__.py
pii_mappers/gptnl_pii_mappers/_backend/: __init__.py  chain_factory.py  informed_formatter.py  language_factory.py  name_grouping.py  ner_factory.py  ner_pii_list.py  private_ai_factory.py  private_ai_pii_list.py  regex_factory.py  regex_pii_list.py
pii_mappers/gptnl_pii_mappers/_backend/public_figures/: __init__.py
pii_mappers/gptnl_pii_mappers/_backend/synthetic_replacement/: __init__.py
pii_mappers/tests/: privateai_test.py
pii_mappers/tests_output/: 1_analyse_all_test_results.ipynb  all_test_results.csv  summary_test_results_everything_EN.csv  summary_test_results_everything_NL.csv  summary_test_results_ner_EN.csv  summary_test_results_ner_NL.csv  summary_test_results_privateai_EN.csv  summary_test_results_privateai_NL.csv  summary_test_results_regex_EN.csv  summary_test_results_regex_NL.csv
punctuation_formatter/: README.md  pyproject.toml
punctuation_formatter/gptnl_punctuation_formatter/: __init__.py  punctuation_formatter.py
punctuation_formatter/gptnl_punctuation_formatter/tests/: punctuation_formatter_test.py
quality_analysis/: README.md  pyproject.toml
quality_analysis/gptnl_quality_analysis/: __init__.py  perplexity_stats.py
quality_analysis/tests/: perplexity_test.py
regex_formatter/: README.md  pyproject.toml
regex_formatter/gptnl_regex_formatter/: __init__.py  regex_formatter.py
regex_formatter/tests/: regex_formatter_test.py
tno_quality_filter/: README.md  pyproject.toml
tno_quality_filter/gptnl_tno_quality_filter/: __init__.py  no_test.py  tno_quality_filter.py
toxic_language_detection/: README.md  pyproject.toml
toxic_language_detection/data/Dutch/: toxic_language_test_sentences.csv
toxic_language_detection/data/English/: toxic_language_test_sentences.csv
toxic_language_detection/gptnl_toxic_language_detection/: __init__.py  __main__.py  informed_formatter.py  toxic_language_detection.py
toxic_language_detection/tests/: conftest.py  toxic_language_dutch_test.py  toxic_language_english_test.py
toxic_language_detection/tests_output/: all_test_results.csv  notebook.ipynb
whitespace_formatter/: README.md  pyproject.toml
whitespace_formatter/gptnl_whitespace_formatter/: __init__.py  whitespace_formatter.py  whitespace_formatter_test.py
whitespace_formatter/tests/: whitespace_formatter_test.py
